--- a/package.json
+++ b/package.json
@@ -15,21 +15,26 @@
   "dependencies": {
     "@angular/common": "~10.0.0",
     "@angular/core": "~10.0.0",
-    "@angular/fire": "^6.1.4",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~10.0.0",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@capacitor/android": "^2.4.6",
-    "@capacitor/core": "2.4.6",
+    "@capacitor/camera": "^5.0.8",
+    "@capacitor/core": "^5.6.0",
+    "@capacitor/filesystem": "^5.2.0",
+    "@capacitor/preferences": "^5.0.6",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.36.0",
     "@ionic-native/native-geocoder": "^5.36.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/pwa-elements": "^3.2.2",
     "angularfire2": "^5.4.2",
     "crypto-js": "^4.0.0",
+    "exif-js": "^2.3.0",
     "firebase": "^8.2.2",
     "ionic": "^5.4.16",
     "rxjs": "~6.5.5",
@@ -42,7 +47,7 @@
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
     "@angular/language-service": "~10.0.0",
-    "@capacitor/cli": "2.4.6",
+    "@capacitor/cli": "^5.6.0",
     "@ionic/angular-toolkit": "^2.3.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
