--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/filesystem": "^5.2.0",
     "@capacitor/geolocation": "^5.0.6",
     "@capacitor/preferences": "^5.0.6",
+    "@ionic-native/android-permissions": "^5.36.0",
     "@ionic-native/camera": "^5.36.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.36.0",
