--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/core": "^5.6.0",
     "@capacitor/filesystem": "^5.2.0",
     "@capacitor/preferences": "^5.0.6",
+    "@ionic-native/android-permissions": "^5.36.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.36.0",
     "@ionic-native/native-geocoder": "^5.36.0",
